assert on laying out fdo#82018-3.docx

Change-Id: I325cd7ff03468009d06c886f800bd12e3acce976